# task_manager

./: README.md  docker-compose.yml  pyproject.toml
taskmanager/taskmanager/: settings.py
